Study part Array, N-Dimension Array Pointer. 23 - 12 - 11

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 narray/basic2darr
 narray/studentScore
+pointer/addPointer
+pointer/address
+pointer/arrayAndPointer
+pointer/arrisarrptrisptr
+pointer/assignPointer
+pointer/pointerIsVar
+pointer/startPointer
+pointer/subPointer
+pointer/1DArray
+pointer/2Darray
+pointer/arrNameIsAddr
+pointer/doublePointer
+pointer/pointerArray
+pointer/thisIsArrayPointer
+
+
