Study chapter 13 - 2 23.12.11(Mon)

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@ pointer/arrNameIsAddr
 pointer/doublePointer
 pointer/pointerArray
 pointer/thisIsArrayPointer
-
+function/basicFuntion
+function/pointerParamFunction
+function/swap
+function/prototype
+function/arrayParam
 
