--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ struct/struct_in_struct
 struct/enum
 struct/union
 Condition-of-parameter-survive-and-Struct-of-data-segmentation/main
+# File/main
+File/define
+File/ifdef
+File/useLibrary
