--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ Condition-of-parameter-survive-and-Struct-of-data-segmentation/main
 File/define
 File/ifdef
 File/useLibrary
+mainFunction/noReturnFunction
+mainFunction/onlyAddress
+mainFunction/voidParameter
+mainFunction/parameterOfMain
