Remain chapter 20 - 1 part of allocate memory to make 2d array

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ mainFunction/noReturnFunction
 mainFunction/onlyAddress
 mainFunction/voidParameter
 mainFunction/parameterOfMain
+DynamicMemoryAllocation/malloc
+DynamicMemoryAllocation/mallocFirst
+DynamicMemoryAllocation/UsePointerArray
