Only remain chapter 23, 24, 25 and move the study concept to velog soon

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,10 @@ DynamicMemoryAllocation/real2DArray
 DynamicMemoryAllocation/structMalloc
 DynamicMemoryAllocation/CreateNode
 DynamicMemoryAllocation/memfunction
-
+macroAndInline/macro
+macroAndInline/inline
+etcKeyword/loserOrWinner
+etcKeyword/calculator
+etcKeyword/typedef
+etcKeyword/pragmapack
+/
