Restart the part fopen 함수의 기타 인자 사용

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ talkWithFile/inputFromFile
 talkWithFile/fseekToStart
 talkWithFile/inputToChar
 talkWithFile/printToFile
+talkWithFile/changeAtoa
+talkWithFile/exampleOffseek
+talkWithFile/fileGetChar
+talkWithFile/fopenr+
+talkWithFile/showLastChar
